@@ -13,6 +13,9 @@ const {
   BasicRunContextManager,
   AsyncHooksRunContextManager
 } = require('./run-context')
+const {
+  getLambdaHandlerInfo
+} = require('../lambda')
 
 var MODULES = [
   ['@elastic/elasticsearch', '@elastic/elasticsearch-canary'],
@@ -77,6 +80,18 @@ function Instrumentation (agent) {
       return require(`./modules/${pathName}.js`)(...args)
     })
   }
+
+  // patch for lambda handler needs special handling since its
+  // module name will always be different than its handler name
+  this._lambdaHandlerInfo = getLambdaHandlerInfo(process.env, MODULES, this._log)
+  if (this._lambdaHandlerInfo) {
+    this.addPatch(
+      this._lambdaHandlerInfo.filePath,
+      (...args) => {
+        return require('./modules/_lambda-handler')(...args)
+      }
+    )
+  }
 }
 
 Instrumentation.prototype.currTransaction = function () {
@@ -106,7 +121,9 @@ Instrumentation.prototype.ids = function () {
 }
 
 Instrumentation.prototype.addPatch = function (modules, handler) {
-  if (!Array.isArray(modules)) modules = [modules]
+  if (!Array.isArray(modules)) {
+    modules = [modules]
+  }
 
   for (const mod of modules) {
     const type = typeof handler
@@ -216,7 +233,9 @@ Instrumentation.prototype._startHook = function () {
     var enabled = self._agent._conf.instrument && !disabled.has(name)
     var pkg, version
 
-    if (basedir) {
+    const isHandlingLambda = self._lambdaHandlerInfo && self._lambdaHandlerInfo.module === name
+
+    if (!isHandlingLambda && basedir) {
       pkg = path.join(basedir, 'package.json')
       try {
         version = JSON.parse(fs.readFileSync(pkg)).version
@@ -234,7 +253,14 @@ Instrumentation.prototype._startHook = function () {
 
 Instrumentation.prototype._patchModule = function (exports, name, version, enabled) {
   this._agent.logger.debug('shimming %s@%s module', name, version)
-  var patches = this._patches.get(name)
+  const isHandlingLambda = this._lambdaHandlerInfo && this._lambdaHandlerInfo.module === name
+  let patches
+  if (!isHandlingLambda) {
+    patches = this._patches.get(name)
+  } else if (name === this._lambdaHandlerInfo.module) {
+    patches = this._patches.get(this._lambdaHandlerInfo.filePath)
+  }
+
   if (patches) {
     for (let patch of patches) {
       if (typeof patch === 'string') {
