@@ -2,6 +2,8 @@
 
 const constants = require('./constants')
 const shimmer = require('./instrumentation/shimmer')
+const fs = require('fs')
+const path = require('path')
 
 // https://github.com/elastic/apm/blob/main/specs/agents/tracing-instrumentation-aws-lambda.md#deriving-cold-starts
 let isFirstRun = true
@@ -464,7 +466,98 @@ function isLambdaExecutionEnvironment () {
   return !!process.env.AWS_LAMBDA_FUNCTION_NAME
 }
 
+function isHandlerNameInModules (handlerModule, modules) {
+  for (let instrumentedModules of modules) {
+    // array.flat didn't come around until Node 11
+    if (!Array.isArray(instrumentedModules)) {
+      instrumentedModules = [instrumentedModules]
+    }
+    for (const instrumentedModule of instrumentedModules) {
+      if (handlerModule === instrumentedModule) {
+        return true
+      }
+    }
+  }
+  return false
+}
+
+// Returns the full file path to the user's handler handler module
+//
+// The Lambda Runtime allows a user's handler module to have either a .js or
+// .cjs extension.  The getFilePath looks for a .js file first, and if not found
+// presumes a csj file exists. If neither file exists this means the user either
+// as a misconfigured handler (they'd never reach this code) or is using a
+// .mjs file extension (which indicates an ECMAScript/import module, which the
+// agent does not support.
+//
+// @param string taskRoot
+// @param string handlerModule
+// @return string
+function getFilePath (taskRoot, handlerModule) {
+  let filePath = path.resolve(taskRoot, `${handlerModule}.js`)
+  if (!fs.existsSync(filePath)) {
+    filePath = path.resolve(taskRoot, `${handlerModule}.cjs`)
+  }
+  return filePath
+}
+
+function getLambdaHandlerInfo (env, modules, logger) {
+  if (!isLambdaExecutionEnvironment() || !env._HANDLER || !env.LAMBDA_TASK_ROOT) {
+    return
+  }
+
+  // extract module name and "path" from handler using the same regex as the runtime
+  // from https://github.com/aws/aws-lambda-nodejs-runtime-interface-client/blob/c31c41ffe5f2f03ae9e8589b96f3b005e2bb8a4a/src/utils/UserFunction.ts#L21
+  const functionExpression = /^([^.]*)\.(.*)$/
+  const match = env._HANDLER.match(functionExpression)
+  if (!match || match.length !== 3) {
+    return
+  }
+  const handlerModule = match[1]
+  const handlerFunctionPath = match[2]
+
+  // if there's a name conflict with an already instrumented module, skip the
+  // instrumentation of the lambda handle and log a message.
+  if (isHandlerNameInModules(handlerModule, modules)) {
+    logger.warn(
+      'Unable to instrument Lambda handler "%s" due to name conflict with "%s", please choose a different Lambda handler name',
+      env._HANDLER, handlerModule
+    )
+    return
+  }
+
+  const handlerFilePath = getFilePath(env.LAMBDA_TASK_ROOT, handlerModule)
+
+  return {
+    filePath: handlerFilePath,
+    module: handlerModule,
+    field: handlerFunctionPath
+  }
+}
+
+// wraps a nested property on the module object with the lambda handler
+// @param string field ex. "foo.baz.bar"
+// @param object module
+function wrapNestedPath (agent, field, module) {
+  const parts = field.split('.')
+  let object = module
+  while (parts.length > 0) {
+    const prop = parts.shift()
+    if (parts.length === 0 && object[prop]) {
+      object[prop] = agent.lambda(object[prop])
+    } else {
+      object = object[prop]
+    }
+    if (!object) {
+      break
+    }
+  }
+}
+
 module.exports = {
+  isLambdaExecutionEnvironment,
   elasticApmAwsLambda,
-  isLambdaExecutionEnvironment
+  setLambdaTransactionData,
+  getLambdaHandlerInfo,
+  wrapNestedPath
 }
