@@ -54,6 +54,7 @@ the case for some spans based on span duration. ({pull}2565[#2565])
 [float]
 ===== Features
 
+* Added automatic wrapping of AWS Lambda handlers ({pull}2577[#2577])
 * Improvements to AWS Lambda instrumentation: Better `transaction.name` for
   API Gateway-triggered lambdas. Respect explicitly set `serviceName`,
   `serviceVersion`, and `usePathAsTransactionName` config settings. Default
